Bruker alle ytelser fra iay-grunnlaget i logikk for permisjoner (#3128)